// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`target renders 0 1`] = `
Array [
  .c0 {
  target: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`target renders function 1`] = `
Array [
  .c0 {
  target: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  target: has;
}

<div
    className="c0"
  />,
  .c0 {
  target: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  target: has;
}

<div
    className="c0"
  />,
]
`;

exports[`target renders invalid theme path 1`] = `
Array [
  .c0 {
  target: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`target renders negative number 1`] = `
Array [
  .c0 {
  target: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  target: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  target: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  target: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`target renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    target: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    target: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`target renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    target: July;
  }
}

@media April {
  .c0 {
    target: August;
  }
}

@media January {
  .c0 {
    target: September;
  }
}

@media April {
  .c0 {
    target: November;
  }
}

@media June {
  .c0 {
    target: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    target: July;
  }
}

@media April {
  .c0 {
    target: August;
  }
}

@media January {
  .c0 {
    target: September;
  }
}

@media April {
  .c0 {
    target: November;
  }
}

@media June {
  .c0 {
    target: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target: January;
  }
}

@media April {
  .c0 {
    target: December;
  }
}

@media January {
  .c0 {
    target: April;
  }
}

@media April {
  .c0 {
    target: May;
  }
}

@media June {
  .c0 {
    target: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target: January;
  }
}

@media April {
  .c0 {
    target: December;
  }
}

@media January {
  .c0 {
    target: April;
  }
}

@media April {
  .c0 {
    target: May;
  }
}

@media June {
  .c0 {
    target: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`target renders postitive number 1`] = `
Array [
  .c0 {
  target: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  target: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  target: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  target: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`target renders string 1`] = `
Array [
  .c0 {
  target: July;
}

<div
    className="c0"
  />,
  .c0 {
  target: July;
}

<div
    className="c0"
  />,
  .c0 {
  target: June;
}

<div
    className="c0"
  />,
  .c0 {
  target: June;
}

<div
    className="c0"
  />,
]
`;

exports[`target renders valid theme path 1`] = `
Array [
  .c0 {
  target: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
